unpackaged/main/default/objects/Marketing_Tactic__c/Marketing_Tactic__c.object-meta.xml
<CustomObject>
    <label>Marketing Tactic</label>
    <nameField>
        <label>Marketing Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>