unpackaged/main/default/objects/Marketing_Tactic__c/fields/Estimated_Workday_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Workday_Duration__c</fullName>
    <label>Estimated Workday Duration</label>
    <summarizedField>Marketing_Task_Template__c.Estimated_Duration__c</summarizedField>
    <summaryForeignKey>Marketing_Task_Template__c.Marketing_Tactic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>