unpackaged/main/default/objects/Marketing_Tactic__c/fields/Role_A__c.field-meta.xml
<CustomField>
    <fullName>Role_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tactic_A</relationshipName>
    <type>Lookup</type>
</CustomField>