unpackaged/main/default/objects/Marketing_Tactic__c/fields/Role_C__c.field-meta.xml
<CustomField>
    <fullName>Role_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tactic_C</relationshipName>
    <type>Lookup</type>
</CustomField>