unpackaged/main/default/objects/Marketing_Tactic__c/fields/Role_F__c.field-meta.xml
<CustomField>
    <fullName>Role_F__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role F</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tactic_F</relationshipName>
    <type>Lookup</type>
</CustomField>