unpackaged/main/default/objects/Marketing_Tactic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role_A__c</columns>
    <columns>Role_B__c</columns>
    <columns>Role_C__c</columns>
    <columns>Role_D__c</columns>
    <columns>Role_E__c</columns>
    <columns>Role_F__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>